# uplog-rs

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml
server/src/: lib.rs  writer.rs
tools/: Cargo.toml
tools/src/: actor.rs  lib.rs  reader.rs  webapi.rs  writer.rs
tools/view/: asset-manifest.json  index.html
tools/view/static/js/: main.f3d11bae.js  main.f3d11bae.js.map
uplog/: Cargo.toml
uplog/benches/: benchmark.rs
uplog/src/: buffer.rs  client.rs  error.rs  kv.rs  lib.rs  logger.rs  macros.rs  session.rs
uplog/tests/: Cargo.toml
uplog/tests/src/: lib.rs
web-viewer/: codegen.yml  package-lock.json  package.json
web-viewer/graphql/query/: operation.graphql
web-viewer/graphql/schema/: schema.graphql
web-viewer/public/: index.html
web-viewer/src/: App.test.tsx  App.tsx
