[package]
name = "uplog-tools"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
clap = "2.33.3"
env_logger = "0.8.3"
futures = "0.3.17"
log = "0.4.14"
serde_cbor = "0.11.1"
tungstenite = "0.13.0"
uplog = { path = "../uplog"}
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
tempdir = "0.3.7"

[[bin]]
name = "main"
path = "src/bin/main.rs" 