[package]
name = "uplog-tools"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-http = "2.2.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
async-graphql = "2.11.0"
async-graphql-actix-web = "2.11.0"
chrono = "0.4.19"
env_logger = "0.8.3"
futures = "0.3.17"
log = "0.4.14"
serde = "1.0.133"
serde_cbor = "0.11.1"
structopt = "0.3.25"
tungstenite = "0.13.0"
uplog = { path = "../uplog"}
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
tempdir = "0.3.7"

[[bin]]
name = "main"
path = "src/bin/main.rs" 

[[bin]]
name = "graphql"
path = "src/bin/graphql.rs" 
