[package]
name = "uplog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
log = { version = "0.4.14"}
serde = { version = "1.0.126", features = ["derive"] }
tungstenite = "0.15.0"
serde_cbor = "0.11.1"
url = "2.2.2"

[dev-dependencies]
bytes = "1.1.0"
criterion = "0.3.4"
fake = {version = "2.4", features=['derive']}
float-cmp = "0.9.0"
itertools = "0.10.1"
serde_cbor = "0.11.1"

[[bench]]
name = "benchmark"
harness = false